--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'git-ftp-action'
-author: 'Sebastian Popp <git-ftp-action@sebastianpopp.com>'
+author: 'Aurelien Barbier-Accary, from Sebastian Popp <git-ftp-action@sebastianpopp.com>'
 description: 'Uses git-ftp and GitHub actions to deploy a GitHub repository to a FTP server.'
 inputs:
   url:
