--- a/action.yml
+++ b/action.yml
@@ -3,18 +3,22 @@ author: 'Aurelien Barbier-Accary, from Sebastian Popp <git-ftp-action@sebastianp
 description: 'Uses git-ftp and GitHub actions to deploy a GitHub repository to a FTP server.'
 inputs:
   url:
-    description: 'URL'
     required: true
+    description: 'FTP url, including the root directory of the project'
   user:
-    description: 'FTP login name'
     required: true
+    description: 'FTP login'
   password:
+    required: false
     description: 'FTP password'
-    required: true
   syncroot:
-    description: 'Specifies a local directory to sync from as if it were the git project root path.'
     required: false
     default: '.'
+    description: 'Local directory to sync from as if it were the git project root path'
+  options:
+    required: false
+    default: '--auto-init'
+    description: 'Additional options'
 runs:
   using: 'docker'
   image: 'Dockerfile'
